@@ -1,3 +1,9 @@
+2006-06-27  Petr Ovtchenkov  <complement@users.sourceforge.net>
+
+	* stlport/stl/_list.h: fix bug in list.swap, thanks Viktor Govako.
+	
+	* test/unit/list_test.cpp: test for bug above.
+
 2006-03-27  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
 	* src/num_put_float.cpp: use buffers that at least longer
